# auto-trainer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.opencode/skills/project-memory-manager/: SKILL.md  compression-rules.md  memory-files.md  views.md
configs/: base.yaml  field_registry.yaml
plans/: NEXT_ACTIONS.md  PROJECT_MEMORY.md  SKILL_SPEC.md  memory_policy.yaml
plans/worklog/: inbox.md  legged_locomotion_onboarding_prior.md  templete_field_discovery_input.md  templete_field_normalization.md  templete_field_normalization_schema.md
prompts/: planner.txt
scripts/: train_go2.sh
src/: analyst.py  command_overrides.py  field_discovery.py  field_normalization.py  llm.py  main.py  models.py  onboarding.py  parser.py  patcher.py  planner.py  reward_overrides.py  runner.py  trainer_overrides.py  utils.py
src/go2_auto_trainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_command_overrides.py  test_field_discovery.py  test_field_normalization.py  test_init_mode.py  test_onboarding.py  test_planner_patcher_alignment.py  test_planner_prompt.py  test_reward_overrides.py  test_runner_effective_input.py  test_train_go2_wrapper.py  test_trainer_override_verification.py  test_trainer_overrides.py  test_training_config.py
